--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<p5>{{tickers["0"][0]}}</p5>
+<p4>Page under construction :(</p4>
 {%endblock %}
