--- a/website/templates/analysis.html
+++ b/website/templates/analysis.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
+<div class="container">
 <br />
 <form method="POST">
     <div class="row">
@@ -355,4 +356,5 @@ const roicChart = new Chart(roic, {
 
 <br />
 <br />
+</div>
 {%endblock %}
