--- a/website/templates/financials.html
+++ b/website/templates/financials.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
+<br />
+<br />
+
+<div>
+
+
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -141,5 +147,6 @@
             </div>
         </section>
 
-<p4>tester</p4>
+</div>
+
 {%endblock %}
