--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -32,6 +32,7 @@
             {% if user.is_authenticated %}
             <a class="nav-item nav-link" id="home" href="/">Home</a>
             <a class="nav-item nav-link" id="analysis" href="/analysis">Analyser</a>
+            <a class="nav-item nav-link" id="financials" href="/financials">Financials</a>
             <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
             {% else %}
             <a class="nav-item nav-link" id="login" href="/login">Login</a>
