--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<p4>Page under construction :(</p4>
+<br />
+
+<div class="h-500 d-flex align-items-center justify-content-center">
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTeb0RxDh3PBzNuXVipQtpMFrm0ucEdxK9SCi6UBbKOcQGoxku8S5uovvlYgREjE-S-1K2h-WP-VuVP/pubhtml?gid=0&amp;single=true&amp;widget=false&amp;headers=false" height="1000" width="420"></iframe>
+</div>
 {%endblock %}
