--- a/website/templates/analysis.html
+++ b/website/templates/analysis.html
@@ -205,8 +205,12 @@
 </div>
 
 <div class="row">
-    <p4>${{div}}</p4>
+    <p4>Yeild: ${{div[0]}}</p4>
 </div>
+<div class="row">
+    <p4>Payout: {{div[1]}}</p4>
+</div>
+
 
 <div class="row">
 <script
